--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
+    "react-leaflet": "^4.2.1",
+    "react-select": "^5.7.4",
     "sass": "^1.63.6",
     "typescript": "5.1.6",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/leaflet": "^1.9.3",
     "prisma": "^5.0.0"
   }
 }
