--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql-tag": "^2.12.6",
     "next": "13.4.9",
     "next-auth": "^4.22.1",
+    "next-cloudinary": "^4.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
