--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.4.9",
     "next-auth": "^4.22.1",
     "next-cloudinary": "^4.14.1",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
