feat(866anmq72): card element ok

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     "**/*.tsx",
     "**/**/*.ts",
     ".next/types/**/*.ts"
-  ],
+, "pages/api/hello.js"  ],
   "exclude": ["node_modules", "**/*.spec.ts"],
   "files": ["graphql.d.ts"]
 }
