--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
+    "@stripe/react-stripe-js": "^2.1.1",
+    "@stripe/stripe-js": "^1.54.1",
     "@types/node": "20.4.0",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -20,6 +22,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "graphql-tag": "^2.12.6",
+    "micro": "^10.0.1",
     "next": "13.4.9",
     "next-auth": "^4.22.1",
     "next-cloudinary": "^4.14.1",
@@ -32,6 +35,7 @@
     "react-leaflet": "^4.2.1",
     "react-select": "^5.7.4",
     "sass": "^1.63.6",
+    "stripe": "^12.14.0",
     "typescript": "5.1.6",
     "zustand": "^4.3.9"
   },
